# A3projetC

./: CMakeLists.txt  README.md  autotests.c  autotests.h  consigne.c  consigne.h  data.txt  define.h  gestiontemp.py  main.c  regulation.c  regulation.h  simulateur.c  test  test_simulateur.c  trace.txt  visualisationC.c  visualisationC.h  visualisationT.c  visualisationT.h
CDM v2.12.36.4 WHQL Certified/: consignes.txt
IHM python-20230306/: data.txt
Interface/: data.txt
autotests/: autotests.c  autotests.h
minimal/: consigne.c  regulation.c
simulateur/: simulateur.c  simulateur.h  test_simulateur.c
